# HMOranges

./: CMakeLists.txt  README.md
analysis/: Final_Stats_Test.py
analysis/stokes_numbers/: stokes_numbers_sim.c
kernels/: iterate_particle.cl
kernels/get_gravity/: gravity.cl
kernels/get_vel_fluid/: no_fluid_flow.cl  tgv.cl
sims/: multi_tgv_periodic.c  tgv_periodic.c
sims/simRunner/: simRunner.c  simRunner.h
structures/: particle.h
tests/run_tests/: run_tests.c  run_tests.h
tests/test_alignment/: alignment_test_kernels.cl  test_alignment.c  test_alignment.h
tests/test_kernels/: test_kernels.c
tests/test_setContext/: test_setContext.h
util/: kernelUtils.cl
util/clUtils/: clUtils.c  clUtils.h
util/particleUtils/: particleUtils.c  particleUtils.h
util/simUtils/: simUtils.c  simUtils.h
verification/coupled_heat_mass_transfer/: C_Heat_Mass_Transfer_Verification.py  c_heat_mass_transfer_sim.c
verification/coupled_heat_mass_transfer/processed_data/: c_heat_mass_transfer_decane_verification.txt  c_heat_mass_transfer_hexane_verification.txt  c_heat_mass_transfer_water_verification.txt
verification/drag/: drag_graphs.py  drag_sim.c
verification/gravity_drag/: gravity_drag_sim.c
verification/gravity_drag/gravity_drag_0_001_tau/: 1_gravity_drag_10000554.txt  1_gravity_drag_10001939.txt  1_gravity_drag_10006093.txt  1_gravity_drag_1001161.txt  1_gravity_drag_10011632.txt  1_gravity_drag_10013017.txt  1_gravity_drag_10015786.txt  1_gravity_drag_10018556.txt  1_gravity_drag_10019940.txt  1_gravity_drag_10024095.txt  1_gravity_drag_10025479.txt  1_gravity_drag_10026864.txt  1_gravity_drag_10028249.txt  1_gravity_drag_10032403.txt  1_gravity_drag_10035172.txt  1_gravity_drag_10037942.txt  1_gravity_drag_1003930.txt  1_gravity_drag_10040711.txt  1_gravity_drag_10042096.txt  1_gravity_drag_10044866.txt  1_gravity_drag_10046250.txt  1_gravity_drag_10047635.txt  1_gravity_drag_10050405.txt  1_gravity_drag_10051789.txt  1_gravity_drag_1005315.txt  1_gravity_drag_10053174.txt  1_gravity_drag_10055943.txt  1_gravity_drag_10057328.txt  1_gravity_drag_10060098.txt  1_gravity_drag_10061482.txt  1_gravity_drag_10065637.txt  1_gravity_drag_1006700.txt  1_gravity_drag_10068406.txt  1_gravity_drag_10072560.txt  1_gravity_drag_10073945.txt  1_gravity_drag_10075330.txt  1_gravity_drag_10086408.txt  1_gravity_drag_10089177.txt  1_gravity_drag_10091947.txt  1_gravity_drag_10096101.txt  (+5050 more)
verification/gravity_drag/gravity_drag_0_1_tau/: 1_gravity_drag_10523892.txt  1_gravity_drag_10939310.txt  1_gravity_drag_11077783.txt  1_gravity_drag_11216255.txt  1_gravity_drag_11493200.txt  1_gravity_drag_11770145.txt  1_gravity_drag_12324036.txt  1_gravity_drag_1246250.txt  1_gravity_drag_12462508.txt  1_gravity_drag_12877926.txt  1_gravity_drag_13293344.txt  1_gravity_drag_13570289.txt  1_gravity_drag_1384722.txt  1_gravity_drag_1523194.txt  1_gravity_drag_1661667.txt  1_gravity_drag_1800139.txt  1_gravity_drag_1938611.txt  1_gravity_drag_2077083.txt  1_gravity_drag_2630973.txt  1_gravity_drag_2769445.txt  1_gravity_drag_3046389.txt  1_gravity_drag_3461806.txt  1_gravity_drag_3877223.txt  1_gravity_drag_4015696.txt  1_gravity_drag_4154168.txt  1_gravity_drag_4431112.txt  1_gravity_drag_4708056.txt  1_gravity_drag_4985000.txt  1_gravity_drag_5123472.txt  1_gravity_drag_5261945.txt  1_gravity_drag_5538889.txt  1_gravity_drag_5815833.txt  1_gravity_drag_6092777.txt  1_gravity_drag_6369721.txt  1_gravity_drag_6508193.txt  1_gravity_drag_6646665.txt  1_gravity_drag_692361.txt  1_gravity_drag_6923610.txt  1_gravity_drag_7200554.txt  1_gravity_drag_7339026.txt  (+13 more)
verification/gravity_drag/gravity_drag_0_2_tau/: 1_gravity_drag_10523889.txt  1_gravity_drag_11077777.txt  1_gravity_drag_11354721.txt  1_gravity_drag_11631665.txt  1_gravity_drag_12185554.txt  1_gravity_drag_12739442.txt  1_gravity_drag_13293330.txt  1_gravity_drag_13847219.txt  1_gravity_drag_1384722.txt  1_gravity_drag_1661667.txt  1_gravity_drag_1938611.txt  1_gravity_drag_2215556.txt  1_gravity_drag_2492500.txt  1_gravity_drag_276944.txt  1_gravity_drag_3046389.txt  1_gravity_drag_3600278.txt  1_gravity_drag_4154166.txt  1_gravity_drag_4708056.txt  1_gravity_drag_4985000.txt  1_gravity_drag_5261945.txt  1_gravity_drag_553889.txt  1_gravity_drag_5538890.txt  1_gravity_drag_5815834.txt  1_gravity_drag_6646668.txt  1_gravity_drag_6923613.txt  1_gravity_drag_7200557.txt  1_gravity_drag_7477502.txt  1_gravity_drag_7754447.txt  1_gravity_drag_8308336.txt  1_gravity_drag_8862224.txt  1_gravity_drag_9139168.txt  1_gravity_drag_9416112.txt  1_gravity_drag_9970000.txt  1_gravity_drag_setup.txt
verification/gravity_drag/gravity_drag_0_3_tau/: 1_gravity_drag_10385417.txt  1_gravity_drag_10800834.txt  1_gravity_drag_11631667.txt  1_gravity_drag_12047084.txt  1_gravity_drag_1246250.txt  1_gravity_drag_13293334.txt  1_gravity_drag_1661667.txt  1_gravity_drag_2492500.txt  1_gravity_drag_2907917.txt  1_gravity_drag_3323334.txt  1_gravity_drag_4154167.txt  1_gravity_drag_5400417.txt  1_gravity_drag_7062084.txt  1_gravity_drag_7477501.txt  1_gravity_drag_7892917.txt  1_gravity_drag_830833.txt  1_gravity_drag_8308334.txt  1_gravity_drag_9554584.txt  1_gravity_drag_9970000.txt  1_gravity_drag_setup.txt
verification/uncoupled_heat_transfer/: UC_Heat_Transfer_Verification.py  uc_heat_transfer_sim.c
verification/uncoupled_mass_transfer/: UC_Mass_Transfer_Verification.py  uc_mass_transfer_sim.c
(+8603 files in other folders)
